tests/harness/errors/147_str_contains_hint.eu
# Error: using 'str.includes' — 'str.contains?' is the correct eucalypt function
text: "hello world"
result: text str.includes("hello")
